Improve the new UI: - Revert `notesList` to standalone notes mode only - Fix splitter styling on Windows - Fix `contextPane` performance fixes - Add a customizable throttle function to `Zotero.Utilities` - Fix reader tab selection issues - Improve error handling in the new editor - Update pdf-reader and zotero-note-editor submodules - Fix contextPane child notes list - Properly notify editor about new images - Fix note title and body snippet extraction - Persist right-hand pane state when switching tab - Hopefully fix two panes visible at the same time

--- a/chrome/content/zotero-platform/win/overlay.css
+++ b/chrome/content/zotero-platform/win/overlay.css
@@ -61,7 +61,9 @@
 
 #zotero-collections-splitter:not([state=collapsed]),
 #zotero-items-splitter:not([state=collapsed]),
-#zotero-tags-splitter:not([state=collapsed]) {
+#zotero-tags-splitter:not([state=collapsed]),
+#zotero-context-splitter:not([state=collapsed]),
+#zotero-context-splitter-stacked:not([state=collapsed]) {
 	border: 0;
 	background-color: transparent;
 	position: relative;
@@ -70,9 +72,15 @@
 	z-index: 1;
 }
 
+#zotero-context-splitter:not([state=collapsed]),
+#zotero-context-splitter-stacked:not([state=collapsed]) {
+	z-index: 0;
+}
+
 #zotero-collections-splitter:not([state=collapsed]),
 #zotero-items-splitter:not([state=collapsed]):not([orient=vertical]),
-#zotero-tags-splitter:not([state=collapsed]) {
+#zotero-tags-splitter:not([state=collapsed]),
+#zotero-context-splitter:not([state=collapsed]) {
 	border-inline-end: 1px solid var(--theme-border-color);
 	min-width: 0;
 	width: 3px;
@@ -80,7 +88,8 @@
 }
 
 #zotero-tags-splitter:not([state=collapsed]),
-#zotero-items-splitter:not([state=collapsed])[orient=vertical] {
+#zotero-items-splitter:not([state=collapsed])[orient=vertical],
+#zotero-context-splitter-stacked:not([state=collapsed]) {
 	border-block-end: 1px solid var(--theme-border-color);
 	min-height: 0;
 	height: 3px;
@@ -89,13 +98,16 @@
 
 #zotero-collections-splitter > grippy,
 #zotero-items-splitter > grippy,
-#zotero-tags-splitter > grippy {
+#zotero-tags-splitter > grippy,
+#zotero-context-splitter > grippy {
 	border: 0;
 }
 
 #zotero-collections-splitter:not([state=collapsed]) > grippy,
 #zotero-items-splitter:not([state=collapsed]) > grippy,
-#zotero-tags-splitter:not([state=collapsed]) > grippy {
+#zotero-tags-splitter:not([state=collapsed]) > grippy,
+#zotero-context-splitter:not([state=collapsed]) > grippy,
+#zotero-context-splitter-stacked:not([state=collapsed]) > grippy {
 	display: none;
 }
 
