--- a/scss/components/_notesList.scss
+++ b/scss/components/_notesList.scss
@@ -31,24 +31,6 @@
 		.first-line {
 			display: flex;
 
-			.icon {
-				display: flex;
-				align-items: center;
-			}
-
-			.title {
-				flex-grow: 1;
-				width: 0;
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				margin-left: 8px;
-			}
-		}
-		
-		.second-line {
-			display: flex;
-
 			.title {
 				flex-grow: 1;
 				width: 0;
@@ -59,7 +41,7 @@
 			}
 		}
 
-		.third-line {
+		.second-line {
 			display: flex;
 
 			.date {
